[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "itfit"
version = "0.0.19"
requires-python = ">=3.8"

description = "Simple, intuitive and interactive application to help fitting common functions to your data"

authors = [
    {name =  "Unai Lería Fortea"   , email =  "unaileria@gmail.com"},
    {name =  "Pablo Vizcaíno García"   , email =  "pablovizcainogarcia@gmail.com"}]

maintainers = [
    {name =  "Unai Lería Fortea"   , email =  "unaileria@gmail.com"},
    {name =  "Pablo Vizcaíno García"   , email =  "pablovizcainogarcia@gmail.com"}] 


readme = "README.md"
license = { text="Apache License 2.0"}

keywords = ["fit", "data", "visual", "analysis"]

classifiers = [
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Education",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Visualization"]

dependencies = ['numpy', 'matplotlib', 'scipy', 'mkdocstrings[python]>=0.18', 'mkdocs-material', 'bumpver', 'mkdocs', 'mkdocs-gen-files', 'mkdocs-literate-nav', 'Pygments>=2.12']

[project.urls]
"GitHub" = "https://github.com/QuanticPony/itfit"
"Documentation" = "https://quanticpony.github.io/itfit/"

[tool.bumpver]
current_version = "0.0.19"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "Update version: {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    '^version = "{version}"',
    'current_version = "{version}"',
]
"itfit/__init__.py" = [
    '__version__ = "{version}"',
]